ESP8266 and Wiznet 5500 raw support

--- a/platformio.ini
+++ b/platformio.ini
@@ -14,17 +14,18 @@ src_dir = lighthub
 platform = atmelavr
 board = megaatmega2560
 framework = arduino
+build_flags =
+    -D Wiz5500
 lib_deps =
-  https://github.com/livello/Arduino-Temperature-Control-Library.git
-  https://github.com/anklimov/DS2482_OneWire
-  https://github.com/anklimov/DmxSimple
-  https://github.com/anklimov/HTTPClient
-  https://github.com/anklimov/aJson
-  https://github.com/anklimov/CmdArduino
-  https://github.com/anklimov/ModbusMaster
-  https://github.com/anklimov/DMXSerial
-  https://github.com/anklimov/Ethernet
-  126
-  https://github.com/PaulStoffregen/SPI.git
-  https://github.com/knolleary/pubsubclient.git
-  https://github.com/natcl/Artnet.git
+          https://github.com/anklimov/Arduino-Temperature-Control-Library.git
+          https://github.com/anklimov/DS2482_OneWire
+          https://github.com/anklimov/DmxSimple
+          https://github.com/anklimov/HTTPClient
+          https://github.com/anklimov/aJson
+          https://github.com/anklimov/CmdArduino
+          https://github.com/anklimov/ModbusMaster
+          https://github.com/anklimov/DMXSerial
+          https://github.com/anklimov/Ethernet2
+          https://github.com/PaulStoffregen/SPI.git
+          https://github.com/knolleary/pubsubclient.git
+          https://github.com/anklimov/Artnet.git
