--- a/platformio.ini
+++ b/platformio.ini
@@ -1,4 +1,4 @@
-; PlatformIO Project Configuration File
+; PlatformIO Project Configuration File (for copy and paste)
 ;
 ;   Build options: build flags, source filter
 ;   Upload options: custom upload port, speed and extra flags
@@ -9,11 +9,54 @@
 ; http://docs.platformio.org/page/projectconf.html
 [platformio]
 src_dir = lighthub
+env_default = megaatmega2560,due
+
+[env:due]
+platform = atmelsam
+framework = arduino
+board = due
+libdeps_dir = .piolibdeps/due
+lib_deps =
+          https://github.com/sebnil/DueFlashStorage
+          https://github.com/livello/Arduino-Temperature-Control-Library.git#1306c49
+;          https://github.com/anklimov/Arduino-Temperature-Control-Library.git
+          https://github.com/anklimov/DS2482_OneWire
+          https://github.com/anklimov/DmxDue
+          https://github.com/arduino-libraries/ArduinoHttpClient
+          https://github.com/anklimov/aJson
+          https://github.com/anklimov/CmdArduino
+          https://github.com/anklimov/ModbusMaster
+          https://github.com/anklimov/Ethernet
+          https://github.com/PaulStoffregen/SPI.git
+          https://github.com/knolleary/pubsubclient.git
+          https://github.com/anklimov/Artnet.git
+          FastLED
+
+[env:due-5500]
+platform = atmelsam
+framework = arduino
+board = due
+build_flags = -D Wiz5500
+libdeps_dir = .piolibdeps/due-5500
+lib_deps =
+          https://github.com/sebnil/DueFlashStorage
+          https://github.com/anklimov/Arduino-Temperature-Control-Library.git
+          https://github.com/anklimov/DS2482_OneWire
+          https://github.com/anklimov/DmxDue
+          https://github.com/arduino-libraries/ArduinoHttpClient
+          https://github.com/anklimov/aJson
+          https://github.com/anklimov/CmdArduino
+          https://github.com/anklimov/ModbusMaster
+          https://github.com/anklimov/Ethernet2
+          https://github.com/PaulStoffregen/SPI.git
+          https://github.com/knolleary/pubsubclient.git
+          https://github.com/anklimov/Artnet.git
 
 [env:megaatmega2560]
 platform = atmelavr
 board = megaatmega2560
 framework = arduino
+libdeps_dir = .piolibdeps/megaatmega2560
 lib_deps =
           https://github.com/livello/Arduino-Temperature-Control-Library.git#1306c49
 ;          https://github.com/anklimov/Arduino-Temperature-Control-Library.git
@@ -29,3 +72,41 @@ lib_deps =
           https://github.com/knolleary/pubsubclient.git
           https://github.com/anklimov/Artnet.git
           FastLED
+
+[env:megaatmega2560-5500]
+platform = atmelavr
+board = megaatmega2560
+framework = arduino
+libdeps_dir = .piolibdeps/megaatmega2560-5500
+build_flags = -D Wiz5500
+lib_deps =
+          https://github.com/anklimov/Arduino-Temperature-Control-Library.git
+          https://github.com/anklimov/DS2482_OneWire
+          https://github.com/anklimov/DmxSimple
+          https://github.com/anklimov/httpClient
+          https://github.com/anklimov/aJson
+          https://github.com/anklimov/CmdArduino
+          https://github.com/anklimov/ModbusMaster
+          https://github.com/anklimov/DMXSerial
+          https://github.com/anklimov/Ethernet2
+          https://github.com/PaulStoffregen/SPI.git
+          https://github.com/knolleary/pubsubclient.git
+          https://github.com/anklimov/Artnet.git
+
+[env:espressif8266]
+platform = espressif8266
+framework = arduino
+board = nodemcuv2
+libdeps_dir = .piolibdeps/espressif8266
+lib_deps =
+          https://github.com/anklimov/Arduino-Temperature-Control-Library.git
+          https://github.com/anklimov/DS2482_OneWire
+          https://github.com/anklimov/ESP-Dmx
+          https://github.com/arduino-libraries/ArduinoHttpClient
+          https://github.com/anklimov/aJson
+          https://github.com/anklimov/CmdArduino
+          https://github.com/anklimov/ModbusMaster
+          https://github.com/anklimov/DMXSerial
+          https://github.com/knolleary/pubsubclient.git
+          https://github.com/anklimov/Artnet.git
+
