env_default, libdeps_dir

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,9 @@
 ; http://docs.platformio.org/page/projectconf.html
 [platformio]
 src_dir = lighthub
-env_default = megaatmega2560,due
+env_default =
+          megaatmega2560
+          due
 
 [env:due]
 platform = atmelsam
