env_default, libdeps_dir does not help

--- a/platformio.ini
+++ b/platformio.ini
@@ -11,13 +11,12 @@
 src_dir = lighthub
 env_default =
           megaatmega2560
-          due
+;          due
 
 [env:due]
 platform = atmelsam
 framework = arduino
 board = due
-libdeps_dir = .piolibdeps/due
 lib_deps =
           https://github.com/sebnil/DueFlashStorage
           https://github.com/livello/Arduino-Temperature-Control-Library.git#1306c49
@@ -39,7 +38,6 @@ platform = atmelsam
 framework = arduino
 board = due
 build_flags = -D Wiz5500
-libdeps_dir = .piolibdeps/due-5500
 lib_deps =
           https://github.com/sebnil/DueFlashStorage
           https://github.com/anklimov/Arduino-Temperature-Control-Library.git
@@ -58,7 +56,6 @@ lib_deps =
 platform = atmelavr
 board = megaatmega2560
 framework = arduino
-libdeps_dir = .piolibdeps/megaatmega2560
 lib_deps =
           https://github.com/livello/Arduino-Temperature-Control-Library.git#1306c49
 ;          https://github.com/anklimov/Arduino-Temperature-Control-Library.git
@@ -79,7 +76,6 @@ lib_deps =
 platform = atmelavr
 board = megaatmega2560
 framework = arduino
-libdeps_dir = .piolibdeps/megaatmega2560-5500
 build_flags = -D Wiz5500
 lib_deps =
           https://github.com/anklimov/Arduino-Temperature-Control-Library.git
@@ -99,7 +95,6 @@ lib_deps =
 platform = espressif8266
 framework = arduino
 board = nodemcuv2
-libdeps_dir = .piolibdeps/espressif8266
 lib_deps =
           https://github.com/anklimov/Arduino-Temperature-Control-Library.git
           https://github.com/anklimov/DS2482_OneWire
