fix libdeps mess

--- a/platformio.ini
+++ b/platformio.ini
@@ -11,12 +11,13 @@
 src_dir = lighthub
 env_default =
           megaatmega2560
-;          due
+          due
 
 [env:due]
 platform = atmelsam
 framework = arduino
 board = due
+lib_ldf_mode = chain+
 lib_deps =
           https://github.com/sebnil/DueFlashStorage
           https://github.com/livello/Arduino-Temperature-Control-Library.git#1306c49
@@ -27,7 +28,7 @@ lib_deps =
           https://github.com/anklimov/CmdArduino
           https://github.com/anklimov/ModbusMaster
           https://github.com/anklimov/Ethernet
-          https://github.com/PaulStoffregen/SPI.git
+;          https://github.com/PaulStoffregen/SPI.git
           https://github.com/knolleary/pubsubclient.git
           https://github.com/anklimov/Artnet.git
           FastLED
@@ -37,6 +38,7 @@ lib_deps =
 platform = atmelavr
 board = megaatmega2560
 framework = arduino
+lib_ldf_mode = chain+
 lib_deps =
           https://github.com/livello/Arduino-Temperature-Control-Library.git#1306c49
           https://github.com/anklimov/DS2482_OneWire
