commit and branch into version number

--- a/platformio.ini
+++ b/platformio.ini
@@ -10,7 +10,7 @@
 [platformio]
 src_dir = lighthub
 env_default =
-          megaatmega2560
+;          megaatmega2560
           due
 
 [env:due]
@@ -18,6 +18,8 @@ platform = atmelsam
 framework = arduino
 board = due
 lib_ldf_mode = chain+
+build_flags = !echo -n "-DPIO_SRC_REV="$(git branch)
+;echo "-DPIO_SRC_REV_COMMIT="$( git rev-parse --short HEAD)
 lib_deps =
           https://github.com/sebnil/DueFlashStorage
           https://github.com/livello/Arduino-Temperature-Control-Library.git#1306c49
@@ -28,7 +30,8 @@ lib_deps =
           https://github.com/anklimov/aJson
           https://github.com/anklimov/CmdArduino
           https://github.com/anklimov/ModbusMaster
-          https://github.com/anklimov/Ethernet
+;          https://github.com/anklimov/Ethernet
+          872
 ;          https://github.com/PaulStoffregen/SPI.git
           https://github.com/knolleary/pubsubclient.git
           https://github.com/anklimov/Artnet.git
