commit and branch into version number

--- a/platformio.ini
+++ b/platformio.ini
@@ -18,8 +18,7 @@ platform = atmelsam
 framework = arduino
 board = due
 lib_ldf_mode = chain+
-build_flags = !echo -n "-DPIO_SRC_REV="$(git branch)
-;echo "-DPIO_SRC_REV_COMMIT="$( git rev-parse --short HEAD)
+build_flags = !echo -n "-DPIO_SRC_REV="$(git log --oneline -1)
 lib_deps =
           https://github.com/sebnil/DueFlashStorage
           https://github.com/livello/Arduino-Temperature-Control-Library.git#1306c49
