--- a/platformio.ini
+++ b/platformio.ini
@@ -18,7 +18,7 @@ platform = atmelsam
 framework = arduino
 board = due
 lib_ldf_mode = chain+
-build_flags = !echo -n "-DPIO_SRC_REV="$(git log --oneline -1)
+build_flags = !echo -n "-DPIO_SRC_REV="$(git rev-parse --short HEAD)
 lib_deps =
           https://github.com/sebnil/DueFlashStorage
           https://github.com/livello/Arduino-Temperature-Control-Library.git#1306c49
@@ -35,6 +35,8 @@ lib_deps =
           https://github.com/knolleary/pubsubclient.git
           https://github.com/anklimov/Artnet.git
           FastLED
+          161
+          322
 
 
 [env:megaatmega2560]
