remove spi.begin

--- a/platformio.ini
+++ b/platformio.ini
@@ -10,8 +10,8 @@
 [platformio]
 src_dir = lighthub
 env_default =
-;          megaatmega2560
-          due
+          megaatmega2560
+;          due
 
 [env:due]
 platform = atmelsam
@@ -59,6 +59,8 @@ lib_deps =
           https://github.com/knolleary/pubsubclient.git
           https://github.com/anklimov/Artnet.git
           FastLED
+          161
+          322
 
 [env:due-5500]
 platform = atmelsam
