--- a/platformio.ini
+++ b/platformio.ini
@@ -24,7 +24,8 @@ lib_deps =
           https://github.com/livello/Arduino-Temperature-Control-Library.git#1306c49
 ;          https://github.com/anklimov/Arduino-Temperature-Control-Library.git
           https://github.com/anklimov/DS2482_OneWire
-          https://github.com/anklimov/DmxDue
+;          https://github.com/anklimov/DmxDue
+          https://github.com/livello/DmxDue#25ee59d
           https://github.com/arduino-libraries/ArduinoHttpClient
           https://github.com/anklimov/aJson
           https://github.com/anklimov/CmdArduino
@@ -43,7 +44,7 @@ lib_deps =
 platform = atmelavr
 board = megaatmega2560
 framework = arduino
-lib_ldf_mode = chain+
+;lib_ldf_mode = chain+
 lib_deps =
           https://github.com/livello/Arduino-Temperature-Control-Library.git#1306c49
 ;          https://github.com/anklimov/Arduino-Temperature-Control-Library.git
