MY_CONFIG_SERVER

--- a/platformio.ini
+++ b/platformio.ini
@@ -42,6 +42,7 @@ platform = atmelavr
 board = megaatmega2560
 framework = arduino
 ;lib_ldf_mode = chain+
+build_flags = !echo -n "-DPIO_SRC_REV="$(git rev-parse --short HEAD)
 lib_deps =
           https://github.com/anklimov/Arduino-Temperature-Control-Library.git
           https://github.com/anklimov/DS2482_OneWire
