common_defitinitons->options custom 1w pin and direct connection without DS2482-100 instructions to README

--- a/platformio.ini
+++ b/platformio.ini
@@ -10,8 +10,8 @@
 [platformio]
 src_dir = lighthub
 env_default =
-          megaatmega2560
-;          due
+;          megaatmega2560
+          due
 
 [env:due]
 platform = atmelsam
