--- a/config/de-ad-be-ef-fe-ed.config.json
+++ b/config/de-ad-be-ef-fe-ed.config.json
@@ -40,7 +40,7 @@
     "fm_h":[8,"fm"]
    
     },
-  "mqtt":["public_test2","m21.cloudmqtt.com",12299,"bkyyvlha","RpHF-x6v4YWb"]    
+  "mqtt":["public_test2","m2m.eclipse.org"]    
   }
 
 	
