Arduino DUE 1-wire fix

--- a/platformio.ini
+++ b/platformio.ini
@@ -11,7 +11,7 @@
 src_dir = lighthub
 env_default =
 ;          megaatmega2560
-         due
+         due-5500
 ;         esp8266
 
 [env:due]
@@ -65,6 +65,8 @@ lib_deps =
 platform = atmelsam
 framework = arduino
 board = due
+lib_ldf_mode = chain+
+build_flags = !echo -n "-DPIO_SRC_REV="$(git rev-parse --short HEAD)
 build_flags = -D Wiz5500
 lib_deps =
           https://github.com/sebnil/DueFlashStorage
@@ -80,6 +82,8 @@ lib_deps =
           https://github.com/knolleary/pubsubclient.git
           https://github.com/anklimov/Artnet.git
           FastLED
+          161
+          322
 
 [env:megaatmega2560-5500]
 platform = atmelavr
