Pre-release. Tested&working on Mega and Due with Wiz5100 and Wiz5500. Need to update dependances.

--- a/platformio.ini
+++ b/platformio.ini
@@ -10,7 +10,9 @@
 [platformio]
 src_dir = lighthub
 env_default =
-;          megaatmega2560
+;         megaatmega2560
+;         megaatmega2560-5500
+;          due
          due-5500
 ;         esp8266
 
@@ -58,8 +60,8 @@ lib_deps =
           https://github.com/knolleary/pubsubclient.git
           https://github.com/anklimov/Artnet.git
           FastLED
-          161
-          322
+        ;  161
+        ;  322
 
 [env:due-5500]
 platform = atmelsam
@@ -67,7 +69,7 @@ framework = arduino
 board = due
 lib_ldf_mode = chain+
 build_flags = !echo -n "-DPIO_SRC_REV="$(git rev-parse --short HEAD)
-build_flags = -D Wiz5500
+build_flags = -D Wiz5500 -D ARTNET_ENABLE
 lib_deps =
           https://github.com/sebnil/DueFlashStorage
           https://github.com/anklimov/Arduino-Temperature-Control-Library.git
@@ -82,14 +84,15 @@ lib_deps =
           https://github.com/knolleary/pubsubclient.git
           https://github.com/anklimov/Artnet.git
           FastLED
-          161
-          322
+;          161
+;          322
 
 [env:megaatmega2560-5500]
 platform = atmelavr
 board = megaatmega2560
 framework = arduino
 lib_ldf_mode = chain+
+build_flags = !echo -n "-DPIO_SRC_REV="$(git rev-parse --short HEAD)
 build_flags = -D Wiz5500
 lib_deps =
           https://github.com/anklimov/Arduino-Temperature-Control-Library.git
@@ -105,6 +108,9 @@ lib_deps =
           https://github.com/knolleary/pubsubclient.git
           https://github.com/anklimov/Artnet.git
           FastLED
+          EEPROM
+      ;    161
+      ;    322
 
 [env:esp8266]
 platform = espressif8266
