Controllino support added

--- a/platformio.ini
+++ b/platformio.ini
@@ -62,6 +62,30 @@ lib_deps =
           FastLED
         ;  161
         ;  322
+        
+[env:controllino]
+platform = atmelavr
+board = megaatmega2560
+framework = arduino
+        ;lib_ldf_mode = chain+
+build_flags = !echo -n "-DPIO_SRC_REV="$(git rev-parse --short HEAD)
+build_flags = -D CONTROLLINO -D DMX_DISABLE -D OWIRE_DISABLE -D CUSTOM_FIRMWARE_MAC=de:ad:be:ef:fe:07
+lib_deps =
+          https://github.com/anklimov/Arduino-Temperature-Control-Library.git
+          https://github.com/anklimov/DS2482_OneWire
+          https://github.com/anklimov/DmxSimple
+          https://github.com/anklimov/httpClient
+          https://github.com/anklimov/aJson
+          https://github.com/anklimov/CmdArduino
+          https://github.com/anklimov/ModbusMaster
+          https://github.com/anklimov/DMXSerial
+          https://github.com/anklimov/Ethernet
+          https://github.com/PaulStoffregen/SPI.git
+          https://github.com/knolleary/pubsubclient.git
+          https://github.com/anklimov/Artnet.git
+          FastLED
+          ;  161
+          ;  322
 
 [env:due-5500]
 platform = atmelsam
