Fix for Controllino

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,8 @@
 ; http://docs.platformio.org/page/projectconf.html
 [platformio]
 src_dir = lighthub
-env_default = due-5500
+env_default =
+          controllino
 ;         megaatmega2560
 ;         megaatmega2560-5500
 ;          due
@@ -62,14 +63,13 @@ lib_deps =
           FastLED
         ;  161
         ;  322
-        
+
 [env:controllino]
 platform = atmelavr
 board = megaatmega2560
 framework = arduino
-        ;lib_ldf_mode = chain+
 build_flags = !echo -n "-DPIO_SRC_REV="$(git rev-parse --short HEAD)
-build_flags = -D CONTROLLINO -D DMX_DISABLE -D OWIRE_DISABLE -D CUSTOM_FIRMWARE_MAC=de:ad:be:ef:fe:07
+build_flags = -D CONTROLLINO -D CUSTOM_FIRMWARE_MAC=de:ad:be:ef:fe:07
 lib_deps =
           https://github.com/anklimov/Arduino-Temperature-Control-Library.git
           https://github.com/anklimov/DS2482_OneWire
