Removed envs can be used with setting up build flags.

--- a/platformio.ini
+++ b/platformio.ini
@@ -10,8 +10,8 @@
 [platformio]
 src_dir = lighthub
 env_default =
-;          megaatmega2560
-         due
+;         megaatmega2560
+          due
 ;         esp8266
 
 [env:due]
@@ -25,17 +25,21 @@ lib_deps =
           https://github.com/anklimov/Arduino-Temperature-Control-Library.git
           https://github.com/anklimov/DS2482_OneWire
           https://github.com/anklimov/DmxDue
-          https://github.com/arduino-libraries/ArduinoHttpClient
+          https://github.com/anklimov/ArduinoHttpClient
           https://github.com/anklimov/aJson
           https://github.com/anklimov/CmdArduino
           https://github.com/anklimov/ModbusMaster
           https://github.com/anklimov/Ethernet
+          https://github.com/anklimov/Ethernet2
 ;          https://github.com/PaulStoffregen/SPI.git
           https://github.com/knolleary/pubsubclient.git
           https://github.com/anklimov/Artnet.git
           FastLED
-          161
-          322
+          SD
+          SdFat
+          https://github.com/adafruit/Adafruit_Sensor.git
+;          DHT sensor library@1.3.0
+          https://github.com/adafruit/DHT-sensor-library
 
 
 [env:megaatmega2560]
@@ -54,58 +58,23 @@ lib_deps =
           https://github.com/anklimov/ModbusMaster
           https://github.com/anklimov/DMXSerial
           https://github.com/anklimov/Ethernet
-          https://github.com/PaulStoffregen/SPI.git
-          https://github.com/knolleary/pubsubclient.git
-          https://github.com/anklimov/Artnet.git
-          FastLED
-          161
-          322
-
-[env:due-5500]
-platform = atmelsam
-framework = arduino
-board = due
-build_flags = -D Wiz5500
-lib_deps =
-          https://github.com/sebnil/DueFlashStorage
-          https://github.com/anklimov/Arduino-Temperature-Control-Library.git
-          https://github.com/anklimov/DS2482_OneWire
-          https://github.com/anklimov/DmxDue
-          https://github.com/arduino-libraries/ArduinoHttpClient
-          https://github.com/anklimov/aJson
-          https://github.com/anklimov/CmdArduino
-          https://github.com/anklimov/ModbusMaster
-          https://github.com/anklimov/Ethernet2
-;          https://github.com/PaulStoffregen/SPI.git
-          https://github.com/knolleary/pubsubclient.git
-          https://github.com/anklimov/Artnet.git
-          FastLED
-
-[env:megaatmega2560-5500]
-platform = atmelavr
-board = megaatmega2560
-framework = arduino
-lib_ldf_mode = chain+
-build_flags = -D Wiz5500
-lib_deps =
-          https://github.com/anklimov/Arduino-Temperature-Control-Library.git
-          https://github.com/anklimov/DS2482_OneWire
-          https://github.com/anklimov/DmxSimple
-          https://github.com/anklimov/httpClient
-          https://github.com/anklimov/aJson
-          https://github.com/anklimov/CmdArduino
-          https://github.com/anklimov/ModbusMaster
-          https://github.com/anklimov/DMXSerial
           https://github.com/anklimov/Ethernet2
           https://github.com/PaulStoffregen/SPI.git
           https://github.com/knolleary/pubsubclient.git
           https://github.com/anklimov/Artnet.git
           FastLED
+          EEPROM
+          SD
+          SdFat
+          https://github.com/adafruit/Adafruit_Sensor.git
+;          DHT sensor library@1.3.0
+          https://github.com/adafruit/DHT-sensor-library
 
 [env:esp8266]
 platform = espressif8266
 framework = arduino
 board = nodemcuv2
+build_flags = !echo -n "-DPIO_SRC_REV="$(git rev-parse --short HEAD)
 lib_ldf_mode = chain+
 lib_deps =
           https://github.com/anklimov/Arduino-Temperature-Control-Library.git
