Default DMX_OUT pin for MEGA+5500 is USART1_TX now

--- a/platformio.ini
+++ b/platformio.ini
@@ -10,11 +10,11 @@
 [platformio]
 src_dir = lighthub
 env_default =
-          controllino
+;          due-5500
+;          controllino
 ;         megaatmega2560
-;         megaatmega2560-5500
+         megaatmega2560-5500
 ;          due
-
 ;         esp8266
 
 [env:due]
@@ -117,7 +117,7 @@ board = megaatmega2560
 framework = arduino
 lib_ldf_mode = chain+
 build_flags = !echo -n "-DPIO_SRC_REV="$(git rev-parse --short HEAD)
-build_flags = -D Wiz5500
+build_flags = -D Wiz5500 -D AVR_DMXOUT_PIN=18
 lib_deps =
           https://github.com/anklimov/Arduino-Temperature-Control-Library.git
           https://github.com/anklimov/DS2482_OneWire
