--- a/platformio.ini
+++ b/platformio.ini
@@ -19,7 +19,6 @@ framework = arduino
 board = due
 lib_ldf_mode = chain+
 build_flags = !echo -n "-DPIO_SRC_REV="$(git log --pretty=format:%h_%ad -1 --date=short)
-extra_scripts = pre:my_custom_build_flags.py
 lib_deps =
           https://github.com/sebnil/DueFlashStorage
           https://github.com/anklimov/Arduino-Temperature-Control-Library.git
@@ -44,7 +43,6 @@ board = megaatmega2560
 framework = arduino
 ;lib_ldf_mode = chain+
 build_flags = !echo -n "-DPIO_SRC_REV="$(git log --pretty=format:%h_%ad -1 --date=short)
-extra_scripts = pre:my_custom_build_flags.py
 lib_deps =
           https://github.com/anklimov/Arduino-Temperature-Control-Library.git
           https://github.com/anklimov/DS2482_OneWire
@@ -62,14 +60,13 @@ lib_deps =
           FastLED
           EEPROM
 
-extra_scripts = pre:my_custom_build_flags.py
 
 [env:esp8266]
 platform = espressif8266
 framework = arduino
 board = nodemcuv2
 lib_ldf_mode = chain+
-extra_scripts = pre:my_custom_build_flags.py
+build_flags = !echo -n "-DPIO_SRC_REV="$(git log --pretty=format:%h_%ad -1 --date=short)
 lib_deps =
           https://github.com/anklimov/Arduino-Temperature-Control-Library.git
           https://github.com/anklimov/DS2482_OneWire
