--- a/platformio.ini
+++ b/platformio.ini
@@ -10,10 +10,10 @@
 [platformio]
 src_dir = lighthub
 env_default =
-;          due-5500
+          due-5500
 ;          controllino
 ;         megaatmega2560
-         megaatmega2560-5500
+;         megaatmega2560-5500
 ;          due
 ;         esp8266
 
