--- a/platformio.ini
+++ b/platformio.ini
@@ -18,6 +18,7 @@ platform = atmelsam
 framework = arduino
 board = due
 lib_ldf_mode = chain+
+extra_scripts = pre:my_build_flags.py
 build_flags = !echo -n "-DPIO_SRC_REV="$(git log --pretty=format:%h_%ad -1 --date=short)
 lib_deps =
           https://github.com/sebnil/DueFlashStorage
@@ -67,17 +68,16 @@ framework = arduino
 board = nodemcuv2
 lib_ldf_mode = chain+
 build_flags = !echo -n "-DPIO_SRC_REV="$(git log --pretty=format:%h_%ad -1 --date=short)
-pre = test.py
+extra_scripts = pre:my_build_flags.py
 lib_deps =
           https://github.com/anklimov/Arduino-Temperature-Control-Library.git
           https://github.com/anklimov/DS2482_OneWire
           https://github.com/anklimov/ESP-Dmx
-          https://github.com/arduino-libraries/ArduinoHttpClient
+          ESP8266HTTPClient
           https://github.com/anklimov/aJson
           https://github.com/anklimov/CmdArduino
           https://github.com/anklimov/ModbusMaster
-          https://github.com/anklimov/DMXSerial
           https://github.com/knolleary/pubsubclient.git
           https://github.com/anklimov/Artnet.git
           FastLED
-          WifiManager@0.12
+          WifiManager
