dht support in progress

--- a/platformio.ini
+++ b/platformio.ini
@@ -11,8 +11,8 @@
 src_dir = lighthub
 env_default =
 ;         megaatmega2560
-;          due
-         esp8266
+          due
+;         esp8266
 [env:due]
 platform = atmelsam
 framework = arduino
@@ -68,7 +68,7 @@ framework = arduino
 board = nodemcuv2
 lib_ldf_mode = chain+
 build_flags = !echo -n "-DPIO_SRC_REV="$(git log --pretty=format:%h_%ad -1 --date=short)
-extra_scripts = pre:my_build_flags.py
+;extra_scripts = pre:my_build_flags.py
 lib_deps =
           https://github.com/anklimov/Arduino-Temperature-Control-Library.git
           https://github.com/anklimov/DS2482_OneWire
