--- a/platformio.ini
+++ b/platformio.ini
@@ -10,9 +10,13 @@
 [platformio]
 src_dir = lighthub
 env_default =
-;         megaatmega2560
-          due
-;         esp8266
+;    megaatmega2560
+;    due
+;    esp8266
+    megaatmega2560-5500
+;    due-5500
+;    controllino
+
 [env:due]
 platform = atmelsam
 framework = arduino
@@ -21,21 +25,21 @@ lib_ldf_mode = chain+
 extra_scripts = pre:my_build_flags.py
 build_flags = !echo -n "-DPIO_SRC_REV="$(git log --pretty=format:%h_%ad -1 --date=short)
 lib_deps =
-          https://github.com/sebnil/DueFlashStorage
-          https://github.com/anklimov/Arduino-Temperature-Control-Library.git
-          https://github.com/anklimov/DS2482_OneWire
-          https://github.com/anklimov/DmxDue
-          https://github.com/anklimov/ArduinoHttpClient
-          https://github.com/anklimov/aJson
-          https://github.com/anklimov/CmdArduino
-          https://github.com/anklimov/ModbusMaster
-          https://github.com/anklimov/Ethernet
-          https://github.com/anklimov/Ethernet2
-          https://github.com/knolleary/pubsubclient.git
-          https://github.com/anklimov/Artnet.git
-          FastLED
-          SD
-          SdFat
+    https://github.com/sebnil/DueFlashStorage
+    https://github.com/anklimov/Arduino-Temperature-Control-Library.git
+    https://github.com/anklimov/DS2482_OneWire
+    https://github.com/anklimov/DmxDue
+    https://github.com/anklimov/ArduinoHttpClient
+    https://github.com/anklimov/aJson
+    https://github.com/anklimov/CmdArduino
+    https://github.com/anklimov/ModbusMaster
+    https://github.com/anklimov/Ethernet
+    https://github.com/anklimov/Ethernet2
+    https://github.com/knolleary/pubsubclient.git
+    https://github.com/anklimov/Artnet.git
+    FastLED
+    SD
+    SdFat
 
 
 [env:megaatmega2560]
@@ -45,21 +49,21 @@ framework = arduino
 ;lib_ldf_mode = chain+
 build_flags = !echo -n "-DPIO_SRC_REV="$(git log --pretty=format:%h_%ad -1 --date=short)
 lib_deps =
-          https://github.com/anklimov/Arduino-Temperature-Control-Library.git
-          https://github.com/anklimov/DS2482_OneWire
-          https://github.com/anklimov/DmxSimple
-          https://github.com/anklimov/httpClient
-          https://github.com/anklimov/aJson
-          https://github.com/anklimov/CmdArduino
-          https://github.com/anklimov/ModbusMaster
-          https://github.com/anklimov/DMXSerial
-          https://github.com/anklimov/Ethernet
-          https://github.com/anklimov/Ethernet2
-          https://github.com/PaulStoffregen/SPI.git
-          https://github.com/knolleary/pubsubclient.git
-          https://github.com/anklimov/Artnet.git
-          FastLED
-          EEPROM
+    https://github.com/anklimov/Arduino-Temperature-Control-Library.git
+    https://github.com/anklimov/DS2482_OneWire
+    https://github.com/anklimov/DmxSimple
+    https://github.com/anklimov/httpClient
+    https://github.com/anklimov/aJson
+    https://github.com/anklimov/CmdArduino
+    https://github.com/anklimov/ModbusMaster
+    https://github.com/anklimov/DMXSerial
+    https://github.com/anklimov/Ethernet
+    https://github.com/anklimov/Ethernet2
+    https://github.com/PaulStoffregen/SPI.git
+    https://github.com/knolleary/pubsubclient.git
+    https://github.com/anklimov/Artnet.git
+    FastLED
+    EEPROM
 
 
 [env:esp8266]
@@ -70,14 +74,89 @@ lib_ldf_mode = chain+
 build_flags = !echo -n "-DPIO_SRC_REV="$(git log --pretty=format:%h_%ad -1 --date=short)
 ;extra_scripts = pre:my_build_flags.py
 lib_deps =
-          https://github.com/anklimov/Arduino-Temperature-Control-Library.git
-          https://github.com/anklimov/DS2482_OneWire
-          https://github.com/anklimov/ESP-Dmx
-          ESP8266HTTPClient
-          https://github.com/anklimov/aJson
-          https://github.com/anklimov/CmdArduino
-          https://github.com/anklimov/ModbusMaster
-          https://github.com/knolleary/pubsubclient.git
-          https://github.com/anklimov/Artnet.git
-          FastLED
-          WifiManager
+    https://github.com/anklimov/Arduino-Temperature-Control-Library.git
+    https://github.com/anklimov/DS2482_OneWire
+    https://github.com/anklimov/ESP-Dmx
+    ESP8266HTTPClient
+    https://github.com/anklimov/aJson
+    https://github.com/anklimov/CmdArduino
+    https://github.com/anklimov/ModbusMaster
+    https://github.com/knolleary/pubsubclient.git
+    https://github.com/anklimov/Artnet.git
+    FastLED
+    WifiManager
+
+[env:megaatmega2560-5500]
+platform = atmelavr
+board = megaatmega2560
+framework = arduino
+;lib_ldf_mode = chain+
+build_flags = !echo -n "-DPIO_SRC_REV="$(git log --pretty=format:%h_%ad -1 --date=short)
+build_flags = -D Wiz5500 -D AVR_DMXOUT_PIN=18
+lib_deps =
+    https://github.com/anklimov/Arduino-Temperature-Control-Library.git
+    https://github.com/anklimov/DS2482_OneWire
+    https://github.com/anklimov/DmxSimple
+    https://github.com/anklimov/httpClient
+    https://github.com/anklimov/aJson
+    https://github.com/anklimov/CmdArduino
+    https://github.com/anklimov/ModbusMaster
+    https://github.com/anklimov/DMXSerial
+    https://github.com/anklimov/Ethernet
+    https://github.com/anklimov/Ethernet2
+    https://github.com/PaulStoffregen/SPI.git
+    https://github.com/knolleary/pubsubclient.git
+    https://github.com/anklimov/Artnet.git
+    FastLED
+    EEPROM
+
+[env:due-5500]
+platform = atmelsam
+framework = arduino
+board = due
+lib_ldf_mode = chain+
+extra_scripts = pre:my_build_flags.py
+build_flags = !echo -n "-DPIO_SRC_REV="$(git log --pretty=format:%h_%ad -1 --date=short)
+build_flags = -D Wiz5500 -D ARTNET_ENABLE
+lib_deps =
+    https://github.com/sebnil/DueFlashStorage
+    https://github.com/anklimov/Arduino-Temperature-Control-Library.git
+    https://github.com/anklimov/DS2482_OneWire
+    https://github.com/anklimov/DmxDue
+    https://github.com/anklimov/ArduinoHttpClient
+    https://github.com/anklimov/aJson
+    https://github.com/anklimov/CmdArduino
+    https://github.com/anklimov/ModbusMaster
+    https://github.com/anklimov/Ethernet
+    https://github.com/anklimov/Ethernet2
+    https://github.com/knolleary/pubsubclient.git
+    https://github.com/anklimov/Artnet.git
+    FastLED
+    SD
+    SdFat
+
+
+[env:controllino]
+platform = atmelavr
+board = megaatmega2560
+framework = arduino
+;lib_ldf_mode = chain+
+build_flags = !echo -n "-DPIO_SRC_REV="$(git log --pretty=format:%h_%ad -1 --date=short)
+build_flags = -D CONTROLLINO -D CUSTOM_FIRMWARE_MAC=de:ad:be:ef:fe:07
+lib_deps =
+    https://github.com/anklimov/Arduino-Temperature-Control-Library.git
+    https://github.com/anklimov/DS2482_OneWire
+    https://github.com/anklimov/DmxSimple
+    https://github.com/anklimov/httpClient
+    https://github.com/anklimov/aJson
+    https://github.com/anklimov/CmdArduino
+    https://github.com/anklimov/ModbusMaster
+    https://github.com/anklimov/DMXSerial
+    https://github.com/anklimov/Ethernet
+    https://github.com/anklimov/Ethernet2
+    https://github.com/PaulStoffregen/SPI.git
+    https://github.com/knolleary/pubsubclient.git
+    https://github.com/anklimov/Artnet.git
+    FastLED
+    EEPROM
+
