--- a/platformio.ini
+++ b/platformio.ini
@@ -10,9 +10,9 @@
 [platformio]
 src_dir = lighthub
 env_default =
-;    megaatmega2560
+    megaatmega2560
 ;    due
-    esp8266
+;    esp8266
 ;    megaatmega2560-5500
 ;    due-5500
 ;    controllino
