Fixed issue "Strange behavior on restart if lan is not initialized #22"

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,8 +12,8 @@ src_dir = lighthub
 env_default =
 ;          due-5500
 ;          controllino
-;         megaatmega2560
-         megaatmega2560-5500
+        megaatmega2560-net
+;         megaatmega2560-5500
 ;          due
 ;         esp8266
 
@@ -64,6 +64,30 @@ lib_deps =
         ;  161
         ;  322
 
+[env:megaatmega2560-net]
+platform = atmelavr
+board = megaatmega2560
+framework = arduino
+upload_port = net:192.168.88.2:23000
+;lib_ldf_mode = chain+
+build_flags = !echo -n "-DPIO_SRC_REV="$(git rev-parse --short HEAD)
+lib_deps =
+                  https://github.com/anklimov/Arduino-Temperature-Control-Library.git
+                  https://github.com/anklimov/DS2482_OneWire
+                  https://github.com/anklimov/DmxSimple
+                  https://github.com/anklimov/httpClient
+                  https://github.com/anklimov/aJson
+                  https://github.com/anklimov/CmdArduino
+                  https://github.com/anklimov/ModbusMaster
+                  https://github.com/anklimov/DMXSerial
+                  https://github.com/anklimov/Ethernet
+                  https://github.com/PaulStoffregen/SPI.git
+                  https://github.com/knolleary/pubsubclient.git
+                  https://github.com/anklimov/Artnet.git
+                  FastLED
+
+
+
 [env:controllino]
 platform = atmelavr
 board = megaatmega2560
@@ -107,6 +131,7 @@ lib_deps =
 ;          https://github.com/PaulStoffregen/SPI.git
           https://github.com/knolleary/pubsubclient.git
           https://github.com/anklimov/Artnet.git
+          https://github.com/brokentoaster/Syslog
           FastLED
 ;          161
 ;          322
