--- a/platformio.ini
+++ b/platformio.ini
@@ -10,13 +10,14 @@
 [platformio]
 src_dir = lighthub
 env_default =
-    megaatmega2560
-;    due
+;    megaatmega2560
+    due
 ;    esp8266
 ;    megaatmega2560-5500
 ;    due-5500
 ;    controllino
-
+build_dir = /tmp/pioenvs
+libdeps_dir = /tmp/piolibdeps
 [env:due]
 platform = atmelsam
 framework = arduino
