--- a/platformio.ini
+++ b/platformio.ini
@@ -10,8 +10,8 @@
 [platformio]
 src_dir = lighthub
 env_default =
-;    megaatmega2560
-    due
+    megaatmega2560
+;    due
 ;    esp8266
 ;    megaatmega2560-5500
 ;    due-5500
