wifimanager esp8266, RESTART_LAN_ON_MQTT_ERRORS option, option RESET_PIN for restart on lan init error

--- a/platformio.ini
+++ b/platformio.ini
@@ -92,6 +92,7 @@ lib_deps =
     Adafruit Unified Sensor
     DHT sensor library for ESPx
     DHT sensor library
+    WifiManager
 
 
 [env:megaatmega2560-5500]
