polling of contacts fixed

--- a/platformio.ini
+++ b/platformio.ini
@@ -117,6 +117,8 @@ lib_deps =
                   https://github.com/knolleary/pubsubclient.git
                   https://github.com/anklimov/Artnet.git
                   FastLED
+                  Adafruit Unified Sensor
+                  DHT sensor library
 
 [env:due-5500]
 platform = atmelsam
