Encoder. need to change irq function

--- a/platformio.ini
+++ b/platformio.ini
@@ -10,8 +10,8 @@
 [platformio]
 src_dir = lighthub
 env_default =
-
-    megaatmega2560-net
+    megaatmega2560
+;    megaatmega2560-net
 ;    due
 ;    esp8266
 ;    megaatmega2560-5500
