esp32 support, build_flags_{ENVNAME}.sh now can be used and edited in IDE!

--- a/platformio.ini
+++ b/platformio.ini
@@ -14,19 +14,68 @@ env_default =
 ;    megaatmega2560-net
 ;    due
 ;    esp8266
+;    esp32
 ;    megaatmega2560-5500
 ;    due-5500
 ;    controllino
+;    stm32f407
+
 build_dir = /tmp/pioenvs
 libdeps_dir = /tmp/piolibdeps
+
+[env:esp32]
+platform = espressif32
+framework = arduino
+board = pico32
+lib_ldf_mode = chain+
+build_flags = !sh build_flags_esp32.sh
+lib_deps =
+    https://github.com/anklimov/Arduino-Temperature-Control-Library.git
+    https://github.com/anklimov/DS2482_OneWire
+    ESP8266HTTPClient
+    Ethernet3
+    https://github.com/anklimov/aJson
+    https://github.com/anklimov/CmdArduino
+    https://github.com/anklimov/ModbusMaster
+    https://github.com/knolleary/pubsubclient.git
+    https://github.com/anklimov/Artnet.git
+    FastLED
+    Adafruit Unified Sensor
+    DHT sensor library for ESPx
+    DHT sensor library
+
+[env:stm32f407]
+platform = ststm32
+framework = arduino
+board = genericSTM32F407VET6
+;lib_ldf_mode = chain+
+build_flags = !sh build_flags_stm32f407.sh
+lib_deps =
+    https://github.com/sebnil/DueFlashStorage
+    https://github.com/anklimov/Arduino-Temperature-Control-Library.git
+    https://github.com/anklimov/DS2482_OneWire
+    https://github.com/anklimov/DmxDue
+    https://github.com/anklimov/ArduinoHttpClient
+    https://github.com/anklimov/aJson
+    https://github.com/anklimov/CmdArduino
+    https://github.com/anklimov/ModbusMaster
+    https://github.com/anklimov/Ethernet
+    https://github.com/anklimov/Ethernet2
+    https://github.com/knolleary/pubsubclient.git
+    https://github.com/anklimov/Artnet.git
+;    FastLED
+    SD
+    SdFat
+    Adafruit Unified Sensor
+    DHT sensor library
+
 
 [env:due]
 platform = atmelsam
 framework = arduino
 board = due
 lib_ldf_mode = chain+
-extra_scripts = pre:my_build_flags.py
-build_flags = !echo -n "-DPIO_SRC_REV="$(git log --pretty=format:%h_%ad -1 --date=short)
+build_flags = !sh build_flags_due.sh
 lib_deps =
     https://github.com/sebnil/DueFlashStorage
     https://github.com/anklimov/Arduino-Temperature-Control-Library.git
@@ -52,7 +101,7 @@ platform = atmelavr
 board = megaatmega2560
 framework = arduino
 ;lib_ldf_mode = chain+
-build_flags = !echo -n "-DPIO_SRC_REV="$(git log --pretty=format:%h_%ad -1 --date=short)
+build_flags = !sh build_flags_mega2560.sh
 lib_deps =
     https://github.com/anklimov/Arduino-Temperature-Control-Library.git
     https://github.com/anklimov/DS2482_OneWire
@@ -77,8 +126,7 @@ platform = espressif8266
 framework = arduino
 board = nodemcuv2
 lib_ldf_mode = chain+
-build_flags = !echo -n "-DMODBUS_DISABLE -DPIO_SRC_REV="$(git log --pretty=format:%h_%ad -1 --date=short)
-;extra_scripts = pre:my_build_flags.py
+build_flags = !sh build_flags_esp8266.sh
 lib_deps =
     https://github.com/anklimov/Arduino-Temperature-Control-Library.git
     https://github.com/anklimov/DS2482_OneWire
@@ -95,14 +143,13 @@ lib_deps =
     DHT sensor library
     WifiManager
 
-
 [env:megaatmega2560-net]
 platform = atmelavr
 board = megaatmega2560
 framework = arduino
 upload_port = net:192.168.88.2:23000
+build_flags = !sh build_flags_mega2560-net.sh
 ;lib_ldf_mode = chain+
-build_flags = !echo -n "-DPIO_SRC_REV="$(git rev-parse --short HEAD)
 lib_deps =
                   https://github.com/anklimov/Arduino-Temperature-Control-Library.git
                   https://github.com/anklimov/DS2482_OneWire
@@ -124,9 +171,7 @@ lib_deps =
 platform = atmelsam
 framework = arduino
 board = due
-lib_ldf_mode = chain+
-extra_scripts = pre:my_build_flags.py
-build_flags = !echo -n "-DPIO_SRC_REV="$(git log --pretty=format:%h_%ad -1 --date=short)
+;lib_ldf_mode = chain+
 build_flags = -D Wiz5500 -D ARTNET_ENABLE
 lib_deps =
     https://github.com/sebnil/DueFlashStorage
