stm32f1 suppport. changes

--- a/platformio.ini
+++ b/platformio.ini
@@ -10,7 +10,7 @@
 [platformio]
 src_dir = lighthub
 env_default =
-    megaatmega2560
+;    megaatmega2560
 ;    megaatmega2560-net
 ;    due
 ;    esp8266
@@ -18,7 +18,7 @@ env_default =
 ;    megaatmega2560-5500
 ;    due-5500
 ;    controllino
-;    stm32f407
+    stm32
 
 build_dir = /tmp/pioenvs
 libdeps_dir = /tmp/piolibdeps
@@ -44,28 +44,22 @@ lib_deps =
     DHT sensor library for ESPx
     DHT sensor library
 
-[env:stm32f407]
+[env:stm32]
 platform = ststm32
 framework = arduino
-board = genericSTM32F407VET6
+board = nucleo_f103rb
+upload_protocol = st-link
 ;lib_ldf_mode = chain+
-build_flags = !sh build_flags_stm32f407.sh
+build_flags = !sh build_flags_stm32.sh
 lib_deps =
-    https://github.com/sebnil/DueFlashStorage
-    https://github.com/anklimov/Arduino-Temperature-Control-Library.git
-    https://github.com/anklimov/DS2482_OneWire
-    https://github.com/anklimov/DmxDue
-    https://github.com/anklimov/ArduinoHttpClient
+    DallasTemperature
     https://github.com/anklimov/aJson
     https://github.com/anklimov/CmdArduino
+    ArduinoHttpClient
     https://github.com/anklimov/ModbusMaster
-    https://github.com/anklimov/Ethernet
-    https://github.com/anklimov/Ethernet2
+;    https://github.com/Serasidis/Ethernet_STM.git
+;    https://github.com/livello/Ethernet_STM.git
     https://github.com/knolleary/pubsubclient.git
-    https://github.com/anklimov/Artnet.git
-;    FastLED
-    SD
-    SdFat
     Adafruit Unified Sensor
     DHT sensor library
 
