from IS-STM32Duino

--- a/platformio.ini
+++ b/platformio.ini
@@ -18,7 +18,7 @@ env_default =
 ;    megaatmega2560-5500
 ;    due-5500
 ;    controllino
-    stm32
+;    stm32
 
 build_dir = /tmp/pioenvs
 libdeps_dir = /tmp/piolibdeps
@@ -48,7 +48,9 @@ lib_deps =
 platform = ststm32
 framework = arduino
 board = nucleo_f103rb
-upload_protocol = st-link
+upload_protocol = stlink
+debug_tool = stlink
+extra_scripts = pre:!pre_stm32.sh
 ;lib_ldf_mode = chain+
 build_flags = !sh build_flags_stm32.sh
 lib_deps =
@@ -62,7 +64,11 @@ lib_deps =
     https://github.com/knolleary/pubsubclient.git
     Adafruit Unified Sensor
     DHT sensor library
-
+;    https://github.com/anklimov/DMXSerial
+;    Syslog
+;    https://github.com/No3x/Syslog.git
+    https://github.com/arcao/Syslog.git
+;    UIPEthernet
 
 [env:due]
 platform = atmelsam
@@ -88,6 +94,7 @@ lib_deps =
     SdFat
     Adafruit Unified Sensor
     DHT sensor library
+    https://github.com/arcao/Syslog.git
 
 
 [env:megaatmega2560]
@@ -136,6 +143,7 @@ lib_deps =
     DHT sensor library for ESPx
     DHT sensor library
     WifiManager
+    https://github.com/arcao/Syslog.git
 
 [env:megaatmega2560-net]
 platform = atmelavr
@@ -145,21 +153,21 @@ upload_port = net:192.168.88.2:23000
 build_flags = !sh build_flags_mega2560-net.sh
 ;lib_ldf_mode = chain+
 lib_deps =
-                  https://github.com/anklimov/Arduino-Temperature-Control-Library.git
-                  https://github.com/anklimov/DS2482_OneWire
-                  https://github.com/anklimov/DmxSimple
-                  https://github.com/anklimov/httpClient
-                  https://github.com/anklimov/aJson
-                  https://github.com/anklimov/CmdArduino
-                  https://github.com/anklimov/ModbusMaster
-                  https://github.com/anklimov/DMXSerial
-                  https://github.com/anklimov/Ethernet
-                  https://github.com/PaulStoffregen/SPI.git
-                  https://github.com/knolleary/pubsubclient.git
-                  https://github.com/anklimov/Artnet.git
-                  FastLED
-                  Adafruit Unified Sensor
-                  DHT sensor library
+    https://github.com/anklimov/Arduino-Temperature-Control-Library.git
+    https://github.com/anklimov/DS2482_OneWire
+    https://github.com/anklimov/DmxSimple
+    https://github.com/anklimov/httpClient
+    https://github.com/anklimov/aJson
+    https://github.com/anklimov/CmdArduino
+    https://github.com/anklimov/ModbusMaster
+    https://github.com/anklimov/DMXSerial
+    https://github.com/anklimov/Ethernet
+    https://github.com/PaulStoffregen/SPI.git
+    https://github.com/knolleary/pubsubclient.git
+    https://github.com/anklimov/Artnet.git
+    FastLED
+    Adafruit Unified Sensor
+    DHT sensor library
 
 [env:due-5500]
 platform = atmelsam
