--- a/platformio.ini
+++ b/platformio.ini
@@ -16,7 +16,7 @@ env_default =
 ;    esp8266
 ;    esp32
 ;    megaatmega2560-5500
-;    due-5500
+     due-5500
 ;    controllino
 ;    stm32
 
@@ -193,6 +193,7 @@ lib_deps =
     SdFat
     Adafruit Unified Sensor
     DHT sensor library
+    https://github.com/arcao/Syslog.git
 
 [env:controllino]
 platform = atmelavr
