--- a/platformio.ini
+++ b/platformio.ini
@@ -10,9 +10,9 @@
 [platformio]
 src_dir = lighthub
 env_default =
-;          due-5500
+          due-5500
 ;          controllino
-        megaatmega2560-net
+;        megaatmega2560-net
 ;         megaatmega2560-5500
 ;          due
 ;         esp8266
@@ -131,7 +131,7 @@ lib_deps =
 ;          https://github.com/PaulStoffregen/SPI.git
           https://github.com/knolleary/pubsubclient.git
           https://github.com/anklimov/Artnet.git
-          https://github.com/brokentoaster/Syslog
+;          https://github.com/brokentoaster/Syslog
           FastLED
 ;          161
 ;          322
