Google Home Volume voicecommand compatible, XON-XOFF command added, Mega compilation issue fixed (Brige.cpp - updated Modbus lib required)

--- a/platformio.ini
+++ b/platformio.ini
@@ -10,13 +10,13 @@
 [platformio]
 src_dir = lighthub
 env_default =
-;    megaatmega2560
+    megaatmega2560
 ;    megaatmega2560-net
 ;    due
 ;    esp8266
 ;    esp32
 ;    megaatmega2560-5500
-     due-5500
+;     due-5500
 ;    controllino
 ;    stm32
 
@@ -112,7 +112,6 @@ lib_deps =
     https://github.com/anklimov/ModbusMaster
     https://github.com/anklimov/DMXSerial
     https://github.com/anklimov/Ethernet
-    https://github.com/anklimov/Ethernet2
     https://github.com/PaulStoffregen/SPI.git
     https://github.com/knolleary/pubsubclient.git
     https://github.com/anklimov/Artnet.git
@@ -120,6 +119,7 @@ lib_deps =
     EEPROM
     Adafruit Unified Sensor
     DHT sensor library
+    https://github.com/arcao/Syslog.git
 
 [env:esp8266]
 platform = espressif8266
@@ -168,6 +168,7 @@ lib_deps =
     Adafruit Unified Sensor
     DHT sensor library
 
+
 [env:due-5500]
 platform = atmelsam
 framework = arduino
@@ -210,7 +211,6 @@ lib_deps =
     https://github.com/anklimov/ModbusMaster
     https://github.com/anklimov/DMXSerial
     https://github.com/anklimov/Ethernet
-    https://github.com/anklimov/Ethernet2
     https://github.com/PaulStoffregen/SPI.git
     https://github.com/knolleary/pubsubclient.git
     https://github.com/anklimov/Artnet.git
