core Tested/Bugfixed. XON/XOFF, save/restore states

--- a/platformio.ini
+++ b/platformio.ini
@@ -99,12 +99,11 @@ lib_deps =
 [env:megaatmega2560]
 platform = atmelavr
 board = megaatmega2560
+;upload_port = net:192.168.88.31:23
 framework = arduino
 ;lib_ldf_mode = chain+
 build_flags = !sh build_flags_mega2560.sh
 lib_deps =
-    https://github.com/anklimov/Arduino-Temperature-Control-Library.git
-    https://github.com/anklimov/DS2482_OneWire
     https://github.com/anklimov/DmxSimple
     https://github.com/anklimov/httpClient
     https://github.com/anklimov/aJson
