--- a/platformio.ini
+++ b/platformio.ini
@@ -174,6 +174,7 @@ framework = arduino
 board = due
 ;lib_ldf_mode = chain+
 build_flags = -D Wiz5500 -D ARTNET_ENABLE
+build_flags = !sh build_flags_due-5500.sh
 lib_deps =
     https://github.com/sebnil/DueFlashStorage
     https://github.com/anklimov/Arduino-Temperature-Control-Library.git
