--- a/platformio.ini
+++ b/platformio.ini
@@ -10,13 +10,13 @@
 [platformio]
 src_dir = lighthub
 env_default =
-    megaatmega2560
+;    megaatmega2560
 ;    megaatmega2560-net
 ;    due
 ;    esp8266
 ;    esp32
 ;    megaatmega2560-5500
-;     due-5500
+     due-5500
 ;    controllino
 ;    stm32
 
@@ -43,6 +43,8 @@ lib_deps =
     Adafruit Unified Sensor
     DHT sensor library for ESPx
     DHT sensor library
+    Streaming
+    https://github.com/Chris--A/PrintEx.git
 
 [env:stm32]
 platform = ststm32
@@ -119,6 +121,7 @@ lib_deps =
     Adafruit Unified Sensor
     DHT sensor library
     https://github.com/arcao/Syslog.git
+    Streaming
 
 [env:esp8266]
 platform = espressif8266
@@ -193,6 +196,9 @@ lib_deps =
     Adafruit Unified Sensor
     DHT sensor library
     https://github.com/arcao/Syslog.git
+;    Streaming
+;    PrintEx
+    https://github.com/livello/PrintEx.git#is-select-redecl
 
 [env:controllino]
 platform = atmelavr
