--- a/platformio.ini
+++ b/platformio.ini
@@ -13,10 +13,10 @@ env_default =
 ;    megaatmega2560
 ;    megaatmega2560-net
 ;    due
-;    esp8266
+    esp8266
 ;    esp32
 ;    megaatmega2560-5500
-     due-5500
+;     due-5500
 ;    controllino
 ;    stm32
 
@@ -145,6 +145,7 @@ lib_deps =
     DHT sensor library
     WifiManager
     https://github.com/arcao/Syslog.git
+    https://github.com/livello/PrintEx.git#is-select-redecl
 
 [env:megaatmega2560-net]
 platform = atmelavr
