--- a/platformio.ini
+++ b/platformio.ini
@@ -146,6 +146,7 @@ lib_deps =
     WifiManager
     https://github.com/arcao/Syslog.git
     https://github.com/livello/PrintEx.git#is-select-redecl
+    Streaming
 
 [env:megaatmega2560-net]
 platform = atmelavr
