Fix after merging PR.(DUE and Mega)

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,15 +13,15 @@ env_default =
 ;    megaatmega2560
 ;    megaatmega2560-net
 ;    due
-    esp8266
+;    esp8266
 ;    esp32
 ;    megaatmega2560-5500
-;     due-5500
+     due-5500
 ;    controllino
 ;    stm32
 
-build_dir = /tmp/pioenvs
-libdeps_dir = /tmp/piolibdeps
+;build_dir = !sh pioenvs.sh ${platformio.env_default}
+;libdeps_dir = !sh piolibdeps.sh ${platformio.env_default}
 
 [env:esp32]
 platform = espressif32
@@ -171,6 +171,8 @@ lib_deps =
     FastLED
     Adafruit Unified Sensor
     DHT sensor library
+    https://github.com/arcao/Syslog.git
+    Streaming
 
 
 [env:due-5500]
@@ -198,7 +200,7 @@ lib_deps =
     Adafruit Unified Sensor
     DHT sensor library
     https://github.com/arcao/Syslog.git
-;    Streaming
+    Streaming
 ;    PrintEx
     https://github.com/livello/PrintEx.git#is-select-redecl
 
