Fix compilation errors and project dependencies for Arduino Mega

--- a/platformio.ini
+++ b/platformio.ini
@@ -10,8 +10,8 @@
 [platformio]
 src_dir = lighthub
 env_default =
-;    megaatmega2560
-    megaatmega2560-net
+    megaatmega2560
+;    megaatmega2560-net
 ;    due
 ;    esp8266
 ;    esp32
@@ -112,7 +112,7 @@ lib_deps =
     https://github.com/anklimov/CmdArduino
     https://github.com/anklimov/ModbusMaster
     https://github.com/anklimov/DMXSerial
-    https://github.com/anklimov/Ethernet
+    https://github.com/anklimov/Ethernet2
     https://github.com/PaulStoffregen/SPI.git
     https://github.com/knolleary/pubsubclient.git
     https://github.com/anklimov/Artnet.git
@@ -122,6 +122,7 @@ lib_deps =
     DHT sensor library
     https://github.com/arcao/Syslog.git
     Streaming
+    https://github.com/Chris--A/PrintEx.git
 
 [env:esp8266]
 platform = espressif8266
