dht_counter_disable with_domoticz printex removed because of compilation errors

--- a/platformio.ini
+++ b/platformio.ini
@@ -10,10 +10,10 @@
 [platformio]
 src_dir = lighthub
 env_default =
-;    megaatmega2560
+    megaatmega2560
 ;    megaatmega2560-net
 ;    due
-    esp8266
+;    esp8266
 ;    esp32
 ;    megaatmega2560-5500
 ;     due-5500
@@ -22,6 +22,8 @@ env_default =
 
 ;build_dir = !sh pioenvs.sh ${platformio.env_default}
 ;libdeps_dir = !sh piolibdeps.sh ${platformio.env_default}
+;build_dir = /tmp/pioenvs
+;libdeps_dir = /tmp/piolibdeps
 
 [env:esp32]
 platform = espressif32
@@ -44,7 +46,6 @@ lib_deps =
     DHT sensor library for ESPx
     DHT sensor library
     Streaming
-    https://github.com/Chris--A/PrintEx.git
 
 [env:stm32]
 platform = ststm32
@@ -145,7 +146,6 @@ lib_deps =
     DHT sensor library
     WifiManager
     https://github.com/arcao/Syslog.git
-    https://github.com/livello/PrintEx.git#is-select-redecl
     Streaming
 
 [env:megaatmega2560-net]
@@ -201,8 +201,6 @@ lib_deps =
     DHT sensor library
     https://github.com/arcao/Syslog.git
     Streaming
-;    PrintEx
-    https://github.com/livello/PrintEx.git#is-select-redecl
 
 [env:controllino]
 platform = atmelavr
@@ -228,3 +226,4 @@ lib_deps =
     EEPROM
     Adafruit Unified Sensor
     DHT sensor library
+    Streaming
